--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta content='text/html; charset=utf-8' http-equiv='Content-Type'/>
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 <title>Arleo Danışmanlık</title>
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 <script type="javascript">
